[project]
name = "runnables"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "arxiv",
    "beautifulsoup4",
    "chromadb",
    "docx2txt",
    "duckduckgo-search",
    "faiss-cpu",
    "fastapi",
    "google-generativeai",
    "groq",
    "html2text",
    "huggingface-hub",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-docling",
    "langchain-google-genai",
    "langchain-groq",
    "langchain-huggingface",
    "langchain-mistralai",
    "langchain-openai",
    "langchain-text-splitters",
    "langsmith",
    "lxml",
    "markdown",
    "mistralai",
    "numpy",
    "openai",
    "pandas",
    "pillow",
    "pinecone",
    "pygithub",
    "pymupdf",
    "pypdf",
    "pytesseract",
    "python-docx",
    "python-dotenv",
    "python-multipart",
    "qdrant-client",
    "rank-bm25",
    "requests",
    "sentence-transformers",
    "sqlalchemy",
    "sqlite-utils",
    "streamlit",
    "tenacity",
    "tiktoken",
    "transformers",
    "unstructured",
    "uvicorn",
    "weaviate-client",
    "wikipedia",
]
